# Robot_project

./: .gitignore  .rviz2.rviz  Generated_map.tsv  GitGuide.txt  README.md  START DDS SERVER fastdds.txt  Start Motor ros2 launch.txt  StartCommands.txt  ToDo  helper_commands.txt  map_file.json  my_config.rviz  rviz.rviz  ssh_github_gide.txt
bags/Test1/: metadata.yaml
bags/Test2/: metadata.yaml
bags/test2/: metadata.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.3
log/: latest_build
src/: all_nodes_launch.py  default.rviz
src/arm_interface/: CMakeLists.txt
src/arm_interface/srv/: Arm.srv
src/arm_service/: package.xml  setup.py
src/arm_service/arm_service/: arm_client.py  arm_service.py  armpi_fpv.urdf  testrun.py
src/controller/: setup.py
src/controller/controller/: controller.py
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: DetectedObject.msg
src/detect_interfaces/: CMakeLists.txt  package.xml
src/detect_interfaces/srv/: DetectObjects.srv
src/detection/: setup.py
src/detection/detection/: canny_edge_detection.py  detection.py  obj_2dimage.py  obj_detection.py  obj_detection_edge.py  tesing_stuff.py
src/display/: setup.py
src/global_planner/: package.xml  setup.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/launch/: all_nodes_launch.py  arm_camera_launch.yaml  lidar_launch.yaml
src/lidar/: setup.py
src/localisation/: CMakeLists.txt  ICP.py  package.xml  setup.py
src/log/: latest_build
src/mapping/: package.xml  setup.py
src/occupancy_grid/: package.xml  setup.py
src/odometry/: setup.py
src/pickup/: setup.cfg  setup.py
src/planning/: package.xml  setup.py
src/py_srvcli/: package.xml  setup.py
src/py_srvcli/py_srvcli/: detection_client  detection_client.py  detection_service.py
src/robot_odometry/: setup.py
src/stearing/: package.xml  setup.cfg  setup.py
src/steering/: package.xml  setup.py
(+458 files in other folders)
