<?xml version="1.0"?>
<package format="3">
  <name>py_srvcli</name>
  <version>0.0.0</version>
  <description>Python Service Example</description>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>example_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>ament_python</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_runtime_py</depend>
  <depend>detect_interfaces</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
